Tests/Resources/Ok/simple_pred.st
language core;

extend with #predecessor;

fn main(n : Nat) -> Nat {
  return Nat::pred(succ(0));
}
