Tests/Resources/Bad/ERROR_NOT_A_REFERENCE/unref_int.st
language core;

extend with #references;

fn main(n : Nat) -> Nat {
  return (*0)(0);
}
